Minor css overflow fix

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
   box-sizing: border-box;
   display: grid;
   grid-template-columns: 80px 2fr 8fr;
-  grid-template-rows: var(--toolbar-height) 1fr;
+  grid-template-rows: var(--toolbar-height) calc(100vh - var(--toolbar-height));
 }
 
 .navbar {
@@ -69,6 +69,7 @@ body {
   grid-row: 1 / 3;
   min-width: 230px;
   border-right: 1px var(--border-color) solid;
+  overflow-y: auto;
 }
 
 .hide {
@@ -80,7 +81,6 @@ body {
   grid-column: 3 / 4;
   grid-row: 1 / 2;
   margin-left: 0px;
-  padding-left: 20px;
 }
 
 .note-content {
@@ -88,15 +88,16 @@ body {
   grid-row: 2 / 3;
   max-width: 720px;
   width: 100%;
-  padding-left: 20px;
-  margin-left: 0px;
+  padding: 0px 16px;
   box-sizing: border-box;
   display: flex;
   flex-flow: column;
+  overflow-y: auto;
 }
 
 .note-body  {
   height: 100%;
+  outline: none;
 }
 
 .notes-list {
